# lsproxy

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  openapi.json  openapi.yaml  repro.py  server.rs  start.sh
dockerfiles/: build  release  run
examples/blast_radius/: blast_radius.py  blast_radius_input.md  client.py  git_utils.py  hierarcy_incoming.py  models.py  pyproject.toml
lsproxy/: Cargo.toml  Dockerfile  example.txt
lsproxy/scripts/: process_monitor.sh
lsproxy/src/: api_types.rs  lib.rs  main.rs  test_utils.rs
lsproxy/src/ast_grep/: client.rs  identifier-config.yml  mod.rs  reference-config.yml  sgconfig.yml  types.rs
lsproxy/src/ast_grep/identifier/: config.yml
lsproxy/src/ast_grep/identifier-rules/cpp/: all-identifiers.yml
lsproxy/src/ast_grep/identifier-rules/javascript/: all-identifiers.yml
lsproxy/src/ast_grep/identifier/rules/csharp/: all-identifiers.yml
lsproxy/src/ast_grep/identifier/rules/go/: all-identifiers.yml
lsproxy/src/ast_grep/identifier/rules/java/: all-identifiers.yml
lsproxy/src/ast_grep/identifier/rules/python/: all-identifiers.yml
lsproxy/src/ast_grep/identifier/rules/ruby/: all-identifiers.yml
lsproxy/src/ast_grep/reference-rules/python/: decorator.yml  final-identifier.yml  function-call.yml  inheritance.yml  object-attribute.yml  type.yml
lsproxy/src/ast_grep/reference-rules/tsx/: component-render.yml
lsproxy/src/ast_grep/reference/rules/csharp/: all-references.yml  class-instantiation.yml  function-call.yml
lsproxy/src/ast_grep/reference/rules/php/: attribute-usage.yml  function-call.yml
lsproxy/src/ast_grep/reference/rules/python/: all-references.yml  final-identifier.yml  non-function.yml
lsproxy/src/ast_grep/reference/rules/tsx/: all-references.yml  decorator.yml  function-call.yml
lsproxy/src/ast_grep/rules/c/: class.yml  function.yml  type.yml
lsproxy/src/ast_grep/rules/cpp/: class.yml  function-declaration.yml  function-definition.yml  function.yml  method.yml  type.yml
lsproxy/src/ast_grep/rules/go/: function.yml  method.yml  type.yml
lsproxy/src/ast_grep/rules/java/: class.yml  interface.yml  method.yml
lsproxy/src/ast_grep/rules/javascript/: class.yml  function.yml  method.yml  variable.yml
lsproxy/src/ast_grep/rules/php/: all-identifiers.yml  class.yml  function.yml
lsproxy/src/ast_grep/rules/python/: all-identifiers.yml  class.yml  function.yml  variable.yml
lsproxy/src/ast_grep/rules/rust/: all-identifiers.yml  enum.yml  function.yml  implementation.yml  struct.yml  trait.yml  type.yml
lsproxy/src/ast_grep/rules/tsx/: all-identifiers.yml  class.yml  function.yml  interface.yml  method.yml  variable.yml
lsproxy/src/ast_grep/rules/typescript/: class.yml  function.yml  interface.yml  method.yml  variable.yml
lsproxy/src/ast_grep/symbol/: config.yml
lsproxy/src/ast_grep/symbol-rules/cpp/: function-declaration.yml
lsproxy/src/ast_grep/symbol-rules/go/: method.yml
lsproxy/src/ast_grep/symbol-rules/php/: enum.yml  trait.yml
lsproxy/src/ast_grep/symbol-rules/rust/: enum.yml  type.yml
lsproxy/src/ast_grep/symbol/rules/csharp/: class.yml  enum.yml  field.yml  interface.yml  local-variable.yml  method.yml  property.yml
lsproxy/src/ast_grep/symbol/rules/go/: function.yml
lsproxy/src/ast_grep/symbol/rules/javascript/: function.yml  method.yml
lsproxy/src/ast_grep/symbol/rules/php/: constant.yml  global.yml  interface.yml  method.yml  property.yml
lsproxy/src/ctags/: client.rs  mod.rs  tag_db.rs
lsproxy/src/handlers/: ctags_definitions_in_file.rs  definition.rs  definitions_in_file.rs  error.rs  file_symbols.rs  find_definition.rs  find_identifier.rs  find_referenced_symbols.rs  find_references.rs  health.rs  list_files.rs  mod.rs  open_java_files.rs  read_source_code.rs  references.rs  utils.rs  workspace_files.rs
lsproxy/src/lsp/: api_types.rs  client.rs  json_rpc.rs  manager.rs  mod.rs  process.rs  types.rs  workspace_documents.rs
lsproxy/src/lsp/languages/: clang.rs  cplusplus.rs  csharp.rs  golang.rs  java.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  sorbet.rs  typescript.rs
lsproxy/src/lsp/manager/: manager.rs  mod.rs
lsproxy/src/lsp/manager/language_tests/: c_tests.rs  cpp_tests.rs  csharp_tests.rs  golang_tests.rs  java_tests.rs  js_tests.rs  mod.rs  php_tests.rs  python_tests.rs  rust_tests.rs  tsx_tests.rs  typescript_tests.rs
lsproxy/src/middleware/: jwt.rs  mod.rs  tests.rs
lsproxy/src/utils/: file_utils.rs  mod.rs  workspace_documents.rs
lsproxy/tests/: integration_tests.rs  java_test.rs  python_test.rs  sample_code_test.rs  test_lib.rs
(+254 files in other folders)
