[package]
name = "github-clone-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2"
git2 = "0.13"
log = "0.4"
env_logger = "0.10"
lsp-types = "0.94"
url = "2.3"
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1.0", features = ["full", "process"] }
utoipa = { version = "3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0", features = ["actix-web"] }
rand = "0.8"
jsonrpc = "0.13.0"
futures = "0.3"
