[package]
name = "lsp-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
url = "2.3"
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1.0", features = ["full", "process"] }
utoipa = { version = "3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0", features = ["actix-web"] }
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
lsp-types = "0.94"
tree-sitter-python = "0.20"
glob = "0.3.1"
uuid = { version = "1.10.0", features = ["v4"] }
ignore = "0.4.23"
