[package]
name = "lsproxy"
version = "0.1.3"
edition = "2021"

[lib]
name = "lsproxy"
path = "src/lib.rs"


[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["release_max_level_debug"] }
env_logger = "0.10"
url = "2.3"
regex = { version = "1.8", features = ["std"] }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1.0", features = ["full", "process"] }
utoipa = { version = "5.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["actix-web"] }
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
lsp-types = "0.94"
glob = "0.3.1"
uuid = { version = "1.10.0", features = ["v4"] }
ignore = "0.4.23"
clap = { version = "4.3", features = ["derive"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
fs_extra = "1.3.0"
json5 = "0.4.1"
jsonwebtoken = "9.2"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.8.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[profile.release]
incremental = true

[profile.dev]
incremental = true

# Force all utoipa dependencies to use the same version
[patch.crates-io]
utoipa = { version = "5.3.1" }